Bug 1458016: Fix bad cast to Text. r=bz

I think it's harmless security-wise, since Text and char data are both
nsIContent, so the vtable offset should be the same.

I could also just do AsContent(), which may be cleaner but involve a virtual
call, or add AsCharacterData(), just let me know.

MozReview-Commit-ID: 79I9CuCmioF